--- a/grid/03-grid-layout-3/index.html
+++ b/grid/03-grid-layout-3/index.html
@@ -26,7 +26,7 @@
         <div class="photo">
           <p>placeholder for image</p>    
         </div>
-        <div class="side-content">Box 1
+        <div class="side-content hello">Box 1
         </div>
         <div class="side-content">Box 2
         </div>
